--- a/css/index.css
+++ b/css/index.css
@@ -4,24 +4,27 @@
 }
 
 html, body {
-//  background-color: #ffff00;
   background-color:#ff69b4;
   font-family: "tablet-gothic",sans-serif;
   overflow: hidden;
   height: 100vh;
-//  padding:10px;
 }
 
 body.consensus {
   background: url("/imgs/confetti.gif");
-  width:100vw;
+* width:100vw;
   height:100vh; 
 }
 
 h1 {  
   font-size: 24px;
+  line-height:26px;
   text-align: center;
   color: #ff69b4;
+}
+
+h1.yellow{
+  color: #ffff00;
 }
 
 h2 {
@@ -30,21 +33,52 @@ h2 {
   color: #ff69b4;
 }
 
-h3, p, li {
+p, li {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
   color: #ff69b4;
+}
+h3{
+  font-size:200px;
+  text-transform: uppercase;
+  color: #ffff00;
+  line-height:177px;
+  margin:-30px;
+  text-shadow: -1px 0 #ff69b4, 0 1px #ff69b4, 1px 0 #ff69b4, 0 -1px #ff69b4;
 }
 h4{
   font-size: 19px;
   line-height:21px;
   color: #ff69b4;
 }
+
+h5 {  
+  font-size: 24px;
+  text-align: center;
+  color: #ffff00;
+}
 ul {
   list-style-type: none;
 }
 
+.buttonagree {
+  background-color: #ff69b4;
+  color: #ffff00;
+  border-radius: 5px;
+  border:none;
+  margin:10px;
+  padding: 10px 38px;
+}
+
+.buttondisagree {
+  background-color: #ff69b4;
+  color: #ffff00;
+  border-radius: 5px;
+  border:none;
+  margin:10px;
+  padding: 10px 38px;
+}
 .resize {
   position: absolute;
   left: 50%;
@@ -60,15 +94,9 @@ ul {
 }
 
 .answer {
-  font-size: 25px;
-  text-align: center;
-  font-family: "tablet-gothic",sans-serif;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #ffff00;
-  background-color: #ff69b4;
-  padding-left: 15px;
-  padding-right: 15px;
+  text-transform: uppercase; 
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .done {
@@ -111,33 +139,34 @@ ul {
 }
 
 .center {
-  /*-webkit-text-stroke: 2px #ff69b4;*/
   background-color: none;
   position: relative;
   display: inline-block;
- // top: 40%;
- // left: 50%;
-//  transform: translate(-50%, -40%);
+  top: 20%;
 }
 
 .panel {
- 
- transform: translate(5%, 5%);
   width:80vw;
-  height:100vh;
+ /* height:100vh;*/
   position: relative;
   background-color: #ffff00;
   display: block;
    
 }
+.background {
+  /*transform: rotate(90deg);*/
+  position: absolute;
 
-.submit {
-  -webkit-text-stroke: 1px #ff69b4;
+  z-index: ;
+  color: #ffff00;
   background-color: none;
-  text-align: center;
-  margin-top: 25px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
-
+.submit {
+}
 
 .yes {
    background-color: none;
@@ -156,9 +185,10 @@ ul {
 }
 
 textarea {
+  border-color:#ff69b4;
   margin-top: -20px;
   height: 90px;
-  width: 100%;
+  width:95%;
   padding: 5px;
   font-family: "tablet-gothic",sans-serif;
   font-size: 17px;
@@ -206,12 +236,13 @@ img.tutorial {
 }
 
 .statement{
-  z-index: 1;
-  border: 1px #ff69b4 solid; 
+ 
+}
+
+.outline{
+  background-color:#ffff00;
+  border: 1px #ff69b4 solid;
   padding:10px;
-  margin-top: 5px;
-  margin-bottom: 0px;
-  background-color: #ffff00;
 }
 
 #promptyes {
@@ -237,13 +268,7 @@ img.tutorial {
   margin-top: -30px;
 }
 
-.consensustext{
-  background-color: none;
-  padding-left: 60px;
-  padding-right: 60px;  
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
+
 
 #noconsensus{
   background-color: #ffff00;
@@ -263,51 +288,11 @@ img.tutorial {
   border:#ff69b4 1px solid;
 }
 
-.container {
-  --n: 1;
-  display: flex;
-  align-items: center;
-  overflow-y: hidden;
-  width: 100%;
-  width: calc(var(--n)*100%);
-  height: 50vw;
-  max-height: 100vh;
-  transform: translate(calc(var(--i, 1)/var(--n)*-100%));
-}
 
-.container .swipeable {
-  width:100%;
-   width:calc(100%/var(--n));
-//  width:calc(100%/var(--n)-var(--padding));
-//  width: calc(100% - var(--gutter) - var(--padding)); 
-  user-select: none;
-  pointer-events: none;
-}
 
-.red {
-  background: #f00 !important;
-}
-
-.green {
-  background: #0f0 !important;
-}
-
-.blue {
-  background: #00f !important;
-}
-
-.white {
-  background: #fff !important;
-}
 
 .screen {
   height: 100%;
-  background-color:none;
-//  background-color:#ffff00;
-//  background-color:#ff69b4;
- // padding: 10px;
-}
-.sheet{
   background-color:#ffff00;
 }
 
@@ -319,18 +304,3 @@ img.tutorial {
   height: 200px;
 }
 
-
-/*.welcome{
-  background-color:#ff69b4;
-}
-
-
-#content{
-  background-color:#ff69b4;
-}
-
-.content{
-  background-color:#ff69b4;
-  padding:30px;
-}
-*/
