--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
 }
 
 html, body {
-  background-color:#ff69b4;
+  background-color:#ff0;
   font-family: "tablet-gothic",sans-serif;
   overflow: hidden;
   height: 100vh;
@@ -18,7 +18,6 @@ body.consensus {
 
 h1 {  
   font-size: 24px;
-  line-height:26px;
   text-align: center;
   color: #ff69b4;
 }
@@ -39,7 +38,9 @@ p, li {
   text-align: center;
   color: #ff69b4;
 }
-h3{
+
+h3 {
+  text-align: center;
   font-size:200px;
   text-transform: uppercase;
   color: #ffff00;
@@ -47,7 +48,8 @@ h3{
   margin:-30px;
   text-shadow: -1px 0 #ff69b4, 0 1px #ff69b4, 1px 0 #ff69b4, 0 -1px #ff69b4;
 }
-h4{
+
+h4 {
   font-size: 19px;
   line-height:21px;
   color: #ff69b4;
@@ -205,7 +207,8 @@ textarea {
 .bluedot {
   position: relative !important;
   height: 120px;
-  margin-top: 20px;
+  padding: 20px;
+  margin-bottom: 20px;
 }
 
 .bluedot span {
@@ -288,12 +291,8 @@ img.tutorial {
   border:#ff69b4 1px solid;
 }
 
-
-
-
 .screen {
   height: 100%;
-  background-color:#ffff00;
 }
 
 #templates {
@@ -302,5 +301,21 @@ img.tutorial {
 
 .welcomeimg-swipe {
   height: 200px;
+}
+
+.red {
+  background: #f00 !important;
+}
+
+.green {
+  background: #0f0 !important;
+}
+
+.blue {
+  background: #00f !important;
+}
+
+.white {
+  background: #fff !important;
 }
 
