--- a/css/index.css
+++ b/css/index.css
@@ -34,9 +34,9 @@ h2 {
 
 p, li {
   font-size: 20px;
-  text-transform: uppercase;
-  text-align: center;
   color: #ff69b4;
+  overflow: scroll;
+
 }
 
 h3 {
@@ -157,15 +157,17 @@ ul {
 }
 .background {
   /*transform: rotate(90deg);*/
-  position: absolute;
-
+/*  position: absolute;*/
+ 
+  text-overflow:none;
+  position:fixed;
   z-index: ;
   color: #ffff00;
   background-color: none;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 .submit {
 }
