--- a/css/dots.css
+++ b/css/dots.css
@@ -1,9 +1,11 @@
 #content {
+  /*
   position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+  min-height: 100vh;
   z-index: 6;
+  overflow: hidden;
+  */
+  width: 100%;
 }
 
 #content .dots {
