--- a/css/index.css
+++ b/css/index.css
@@ -4,16 +4,15 @@
 }
 
 html, body {
-  background-color:#ff0;
   font-family: "tablet-gothic",sans-serif;
-  overflow: hidden;
-  height: 100vh;
+  /* overflow: hidden; */
+  /* min-height: 100vh; */
 }
 
 body.consensus {
   background: url("/imgs/confetti.gif");
-* width:100vw;
-  height:100vh; 
+  width:100vw;
+  min-height:100vh; 
 }
 
 h1 {  
@@ -36,7 +35,6 @@ p, li {
   font-size: 20px;
   color: #ff69b4;
   overflow: scroll;
-
 }
 
 h3 {
@@ -141,10 +139,20 @@ ul {
 }
 
 .center {
+/*
   background-color: none;
   position: relative;
   display: inline-block;
   top: 20%;
+  top: 50%;
+  top: 32px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
+*/
+  margin-top: 32px;
+  display: inline-block;
+  text-align: center;
 }
 
 .panel {
@@ -156,19 +164,18 @@ ul {
    
 }
 .background {
-  /*transform: rotate(90deg);*/
-/*  position: absolute;*/
- 
-  text-overflow:none;
+   text-overflow:none;
   position:fixed;
   z-index: ;
   color: #ffff00;
-  background-color: none;
+  background-color:#ff0;
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  z-index: -1;
 }
+
 .submit {
 }
 
@@ -292,7 +299,7 @@ img.tutorial {
 }
 
 .screen {
-  height: 100%;
+  /* min-height: 100vh; */
 }
 
 #templates {
@@ -317,9 +324,5 @@ img.tutorial {
 
 .white {
   background: #fff !important;
-}
-
-.prompt-margin {
-  top: 10px;
 }
 
