--- a/css/index.css
+++ b/css/index.css
@@ -4,9 +4,7 @@
 }
 
 html, body {
-  font-family: "tablet-gothic",sans-serif;
-  /* overflow: hidden; */
-  /* min-height: 100vh; */
+  font-family: 'CMRDD', sans-serif;
 }
 
 body.consensus {
@@ -16,24 +14,16 @@ body.consensus {
 }
 
 h1 {  
-  font-size: 24px;
+  font-size: 2em;
   text-align: center;
-  color: #ff69b4;
-}
-
-h1.yellow{
-  color: #ffff00;
 }
 
 h2 {
-  font-size: 18px;
   text-align: center;
-  color: #ff69b4;
 }
 
 p, li {
   font-size: 20px;
-  color: #ff69b4;
   overflow: scroll;
 }
 
@@ -41,7 +31,6 @@ h3 {
   text-align: center;
   font-size:200px;
   text-transform: uppercase;
-  color: #ffff00;
   line-height:177px;
   margin:-30px;
   text-shadow: -1px 0 #ff69b4, 0 1px #ff69b4, 1px 0 #ff69b4, 0 -1px #ff69b4;
@@ -50,57 +39,32 @@ h3 {
 h4 {
   font-size: 19px;
   line-height:21px;
-  color: #ff69b4;
 }
 
 h5 {  
   font-size: 24px;
   text-align: center;
-  color: #ffff00;
 }
+
 ul {
   list-style-type: none;
 }
 
-.buttonagree {
-  background-color: #ff69b4;
-  color: #ffff00;
-  border-radius: 5px;
-  border:none;
-  margin:10px;
-  padding: 10px 38px;
+button {
+  position: relative;
+  background: #000;
+  border: 0;
+  border-radius: 15px 15px;
+  font-size: 24px;
+  padding: 15px 5px 4px 52px;
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+  margin: 15px;
 }
 
-.buttondisagree {
-  background-color: #ff69b4;
-  color: #ffff00;
-  border-radius: 5px;
-  border:none;
-  margin:10px;
-  padding: 10px 38px;
-}
-.resize {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 10px;
-  z-index: 2;
-  text-transform: uppercase;
-  font-size: 1rem;
-}
-
-.white {
-  color: none;
-}
-
-.answer {
-  text-transform: uppercase; 
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.done {
-  background-color: #83c8f9;
+button.left {
+  padding: 15px 52px 4px 5px; 
 }
 
 @keyframes uber {
@@ -127,6 +91,10 @@ ul {
   -webkit-animation-play-state: running;
 }
 
+.dynamic {
+  font-family: 'CMRDDExtraBold', sans-serif;
+}
+
 .blink {
   -webkit-animation: blink 1s step-end infinite;
   -moz-animation: blink 1s step-end infinite;
@@ -139,17 +107,6 @@ ul {
 }
 
 .center {
-/*
-  background-color: none;
-  position: relative;
-  display: inline-block;
-  top: 20%;
-  top: 50%;
-  top: 32px;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0%);
-*/
   margin-top: 32px;
   display: inline-block;
   text-align: center;
@@ -157,38 +114,21 @@ ul {
 
 .panel {
   width:80vw;
- /* height:100vh;*/
   position: relative;
-  background-color: #ffff00;
   display: block;
    
 }
+
 .background {
-   text-overflow:none;
+  text-overflow:none;
   position:fixed;
   z-index: ;
-  color: #ffff00;
-  background-color:#ff0;
   top: 0;
   left: 0;
   width: 100vw;
   min-height: 100vh;
   z-index: -1;
-}
-
-.submit {
-}
-
-.yes {
-   background-color: none;
-}
-
-.no {
-   background-color: none;
-}
-
-.button {
-  cursor: pointer;
+  background: #fff top/100% url("../background_noise_block_left.png");
 }
 
 @keyframes blink {
@@ -196,15 +136,11 @@ ul {
 }
 
 textarea {
-  border-color:#ff69b4;
-  margin-top: -20px;
-  height: 90px;
-  width:95%;
+  height: 200px;
+  width: 90%;
   padding: 5px;
-  font-family: "tablet-gothic",sans-serif;
   font-size: 17px;
-  color: #ffadd6;
-  
+  border: 8px #000 solid;
 }
 
 .img-swipe {
@@ -213,22 +149,7 @@ textarea {
   height: 89px;
 }
 
-.bluedot {
-  position: relative !important;
-  height: 120px;
-  padding: 20px;
-  margin-bottom: 20px;
-}
-
-.bluedot span {
-  top: unset !important;
-  width: 140px !important;
-  height: 140px !important;
-  left: calc(50% - 70px) !important;
-}
-
 #instruction {
-  background: #ffff00;
   width: 100%;
   height: 100%;
 }
@@ -251,10 +172,9 @@ img.tutorial {
  
 }
 
-.outline{
-  background-color:#ffff00;
-  border: 1px #ff69b4 solid;
-  padding:10px;
+.outline {
+  border: 8px #000 solid;
+  padding: 10px;
 }
 
 #promptyes {
@@ -267,21 +187,7 @@ img.tutorial {
   height: 100vh;
 }
 
-.pleasewait{
-  margin: 20px;
-  margin-top:100px;
-}
-
-.counter {
- 
-}
-
-.agree{
-  margin-top: -30px;
-}
-
 #noconsensus{
-  background-color: #ffff00;
   height: 100vh;
   padding-left: 60px;
   padding-right: 60px;  
@@ -294,35 +200,17 @@ img.tutorial {
   padding-left:10px;
   padding-top:10px;
   padding-bottom: 20px;
-  background-color: #ffff00;
-  border:#ff69b4 1px solid;
-}
-
-.screen {
-  /* min-height: 100vh; */
 }
 
 #templates {
   display: none;
 }
 
-.welcomeimg-swipe {
-  height: 200px;
-}
-
-.red {
-  background: #f00 !important;
-}
-
-.green {
-  background: #0f0 !important;
-}
-
-.blue {
-  background: #00f !important;
-}
-
 .white {
-  background: #fff !important;
+  color: #fff;
+}
+
+.nowrap {
+  white-space: nowrap;
 }
 
