--- a/css/logo.css
+++ b/css/logo.css
@@ -22,64 +22,65 @@
  font-family: CMRDD, sans-sarif;
  display: inline-block;
  /*transform: scale(1) rotate(0deg) translate(0px, 0px) skew(2deg, 0deg);*/
- text-shadow: 0px 0px 1px black;
- -webkit-text-stroke: 5px black;
+ text-shadow: 0px 0px 1px white;
+ -webkit-text-stroke: 5px white;
  letter-spacing: 0.1em;
 }
 
 .white .logo0 {
- text-shadow: 0px 0px 1px white;
- -webkit-text-stroke: 5px white;
+ text-shadow: 0px 0px 1px black;
+ -webkit-text-stroke: 5px black;
 }
 
 .logo1 {
  font-family: CMRDDBold, sans-sarif;
- -webkit-text-stroke: 6px black;
+ -webkit-text-stroke: 6px white;
  letter-spacing: 0.2rem;
 }
 
 .white .logo1 {
- -webkit-text-stroke: 6px white;
+ -webkit-text-stroke: 6px black;
 }
 
 .logo2 {
  font-family: CMRDD, sans-sarif;
- -webkit-text-stroke: 1px black;
+ -webkit-text-stroke: 1px white; 
  letter-spacing: 0.2rem;
 }
 
 .white .logo2 {
- -webkit-text-stroke: 6px white;
+ -webkit-text-stroke: 6px black;
 }
 
 .logo3 {
  font-family: CMRDDItalic, sans-sarif;
- -webkit-text-stroke: .5px black;
+ -webkit-text-stroke: .5px white;
  letter-spacing: 0.2rem;
 }
 
 .white .logo3 {
- -webkit-text-stroke: .5px white;
+ -webkit-text-stroke: .5px black;
+  color: black;
 }
 
 .logo4 {
  font-family: CMRDD, sans-sarif;
- -webkit-text-stroke: .5px black;
+ -webkit-text-stroke: .5px white;
  letter-spacing: 0.0rem;
 }
 
 .white .logo4 {
- -webkit-text-stroke: .5px white;
+ -webkit-text-stroke: .5px black;
 }
 
 .logo5 {
  font-family: CMRDDItalic, sans-sarif;
- -webkit-text-stroke: -.25px black;
+ -webkit-text-stroke: -.25px white;
  letter-spacing: 0.4rem;
 }
 
 .white .logo5 {
- -webkit-text-stroke: -.25px white;
+ -webkit-text-stroke: -.25px black;
 }
 
 @keyframes right {
