--- a/css/logo.css
+++ b/css/logo.css
@@ -71,6 +71,7 @@
 
 .white .logo4 {
  -webkit-text-stroke: .5px black;
+  color: black;
 }
 
 .logo5 {
@@ -81,6 +82,7 @@
 
 .white .logo5 {
  -webkit-text-stroke: -.25px black;
+  color: black;
 }
 
 @keyframes right {
